--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="google-site-verification" content="733sERG2XKU1-F7i2VZrRYvZ6ZwvAX8J6m7Hex4Mmpo" />
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Mithun Multi-Tool App</title>
