--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="Mithun Multi-Tool App: a free, web-based toolkit with calculators, converters, number tools, quizzes and more — all in one place for daily use.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mithun Multi-Tool App</title>
